--- a/www/index.html
+++ b/www/index.html
@@ -24,16 +24,17 @@
 
   <body ng-app="starter" ng-controller="todoCtrl">
     <ion-side-menus>
+    <!--Center Content-->
       <ion-side-menu-content>
         <ion-header-bar class="bar-dark">
-        <button class="button button-icon" ng-click="toggleProjects()">
-          <i class="icon tcin-navicon"></i>
+        <button class="button button-icon" ng-click="toggleBuckets()">
+          <i class="icon icon-navicon"></i>
         </button>
-          <h1 class="title">My BucketList</h1>
+          <h1 class="title">{{recentBucket}}</h1>
         </ion-header-bar>
         <ion-content scroll="false">
           <ion-list>
-            <ion-item class="item item-checkbox" ng-dblclick="edit(task)" ng-repeat="task in tasks">
+            <ion-item class="item item-checkbox" ng-dblclick="edit(task)" ng-repeat="task in recentBucket.tasks">
             <label class="checkbox">
             <input class="toggle" type="checkbox" ng-model="task.completed" ng-change="taskCompleted(task)"/>
           </label>
@@ -45,6 +46,25 @@
           </button>
         </ion-content>
       </ion-side-menu-content>
+      <!--conter content over-->
+      <ion-side-menu side="left">
+       <ion-header-bar class="bar-dark">
+        <button class="button button-icon" ng-click="toggleBuckets()">
+          <i class="icon icon-navicon"></i>
+        </button>
+          <h1 class="title">My Buckets</h1>
+        </ion-header-bar>
+         <ion-content scroll="false">
+        <ion-list>
+            <ion-item ng-repeat="bucket in Buckets" ng-click="open(bucket)">
+                  {{bucket.title}}
+            </ion-item>
+          </ion-list>
+        <button class="button button-icon" ng-click="newBucket()">
+            <i class="icon ion-compose"></i>
+          </button>
+        </ion-content>
+      </ion-side-menu>
     </ion-side-menus>
     <script id=:"new-task.html" type="text/ng-template">
     
