--- a/www/new-bucket.html
+++ b/www/new-bucket.html
@@ -1,7 +1,7 @@
   <div class="modal">
         <ion-header-bar class="bars-secondary">
           <h1class="title">NEW BUCKET</h1>
-          <button class="button button-clear button-positive" ng-click="closeNewTask()">Cancel</button>
+          <button class="button button-clear button-positive" ng-click="closeNewBucket()">Cancel</button>
         </ion-header-bar>
         <ion-content>
           <form ng-submit="createBucket(bucket)">
