--- a/www/index.html
+++ b/www/index.html
@@ -30,13 +30,13 @@
         <button class="button button-icon" ng-click="toggleBuckets()">
           <i class="icon icon-navicon"></i>
         </button>
-          <h1 class="title">{{recentBucket}}</h1>
+          <h1 class="title">{{recentBucket.title}}</h1>
         </ion-header-bar>
         <ion-content scroll="false">
           <ion-list>
             <ion-item class="item item-checkbox" ng-dblclick="edit(task)" ng-repeat="task in recentBucket.tasks">
             <label class="checkbox">
-            <input class="toggle" type="checkbox" ng-model="task.completed" ng-change="taskCompleted(task)"/>
+            <input class="toggle" type="checkbox" ng-model="task.completed" ng-change="taskCompleted(recentBucket)"/>
           </label>
                   {{task.title}}
             </ion-item>
@@ -49,14 +49,14 @@
       <!--conter content over-->
       <ion-side-menu side="left">
        <ion-header-bar class="bar-dark">
-        <button class="button button-icon" ng-click="toggleBuckets()">
+        <button class="button button-icon" >
           <i class="icon icon-navicon"></i>
         </button>
           <h1 class="title">My Buckets</h1>
         </ion-header-bar>
          <ion-content scroll="false">
         <ion-list>
-            <ion-item ng-repeat="bucket in Buckets" ng-click="open(bucket)">
+            <ion-item ng-repeat="bucket in Buckets" ng-click="open(bucket,$index)">
                   {{bucket.title}}
             </ion-item>
           </ion-list>
